alignment raj-issues

--- a/src/app/quotepage/driverdialog/driverdialog.component.css
+++ b/src/app/quotepage/driverdialog/driverdialog.component.css
@@ -1,8 +1,15 @@
+mat-form-field {
+  width: 100%;
+   
+ }
 ::ng-deep mat-grid-tile.mat-grid-tile .mat-figure {
-    right: auto;
+  width: 100%;
+  padding-right: 5px;
+  padding-left: 5px;
 }
-.mat-grid-tile{
-    width:300px;
+.text-inside{
+
+  width: 100%;
 }
 ::ng-deep .mat-radio-button.mat-accent.mat-radio-checked .mat-radio-outer-circle , .mat-radio-outer-circle {
     border-color: rgb(108, 184, 228) !important;
@@ -20,12 +27,7 @@
   background-color:#9ea7a8;
 }
 
-mat-form-field {
-  width: 300px;
-  right: initial !important;
-  margin-left: 15px;
-  
-}
+
 button:disabled{
   background-color: #9ea7a8;
 }
